--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Self-driving car - No libraries</title>
+    <title>Self-driving car project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
